--- a/android/app/src/main/res/layout/one_day_photo.xml
+++ b/android/app/src/main/res/layout/one_day_photo.xml
@@ -15,31 +15,32 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="@{() -> clickListener.onClick(dayPhoto)}">
+        android:onClick="@{() -> clickListener.onClick(dayPhoto)}"
+       >
 
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/dayphoto_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{dayPhoto.text}"
+            tools:text="22. prosince 2022"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="asdsa"/>
+            android:textColor="@color/white"/>
 
         <ImageView
             android:id="@+id/dayphoto_thumbnail"
-            android:layout_width="wrap_content"
-            android:layout_height="100dp"
+            android:layout_width="0dp"
+            android:layout_height="200dp"
             android:adjustViewBounds="true"
-            android:contentDescription="dodam"
-            android:padding="2dp"
-            android:scaleType="fitXY"
+            android:contentDescription="@{dayPhoto.text}"
+            android:layout_margin="8dp"
+            android:scaleType="centerCrop"
             app:imageUrl="@{dayPhoto.file}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView"
+            app:layout_constraintTop_toBottomOf="@+id/dayphoto_text"
             tools:src="@tools:sample/backgrounds/scenic" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
